# turboquant

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_accuracy.py
tests/: test_codebook.py  test_core.py  test_qjl.py  test_quantizer.py
turboquant/: __init__.py  codebook.py  core.py  pgvector.py  qjl.py  quantizer.py  storage.py
