[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant: Near-optimal vector quantization at 3-4 bits/dimension. First open-source implementation of the ICLR 2026 paper."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Project Julian Contributors" },
]
keywords = ["vector-quantization", "embeddings", "compression", "pgvector", "turboquant", "polarquant", "qjl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
pgvector = ["psycopg[binary]>=3.1", "pgvector>=0.3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["turboquant[pgvector,dev]"]

[project.urls]
Homepage = "https://github.com/nhrzxxw9dn-web/turboquant"
Repository = "https://github.com/nhrzxxw9dn-web/turboquant"
Issues = "https://github.com/nhrzxxw9dn-web/turboquant/issues"

[tool.hatch.build.targets.wheel]
packages = ["turboquant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
